--- a/front-end/templates/test.page.gohtml
+++ b/front-end/templates/test.page.gohtml
@@ -7,6 +7,7 @@
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker-service</a>
+                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth-service</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -33,13 +34,14 @@
 {{define "js"}}
     <script>
         let brokerBtn = document.getElementById('brokerBtn')
+        let authBrokerBtn = document.getElementById('authBrokerBtn')
         let output = document.getElementById('output')
         let sent = document.getElementById('payload')
         let received = document.getElementById('received')
 
         brokerBtn.addEventListener('click', function () {
             const body = {
-                method: "POST",
+                method: "POST"
             }
 
             fetch("http://localhost:8000", body)
@@ -50,6 +52,41 @@
 
                     if (data.error) {
                         console.log(data.error + ' ' + data.message)
+                    } else {
+                        output.innerHTML += `<br><strong> Response from broker-service:</strong> ${data.message}`
+                    }
+                })
+                .catch((err) => {
+                    output.innerHTML += `<br><strong class="text-danger"> Error:</strong> ${err.message}`
+                })
+        })
+
+        authBrokerBtn.addEventListener('click', function () {
+            const payload = {
+                action: "auth",
+                auth: {
+                    email:"admin@example.com",
+                    password:"verysecret"
+                }
+            }
+
+            const headers = new Headers()
+            headers.append("Content-Type", "application/json")
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers
+            }
+
+            fetch("http://localhost:8000/handle", body)
+                .then((res) => res.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4)
+                    received.innerHTML = JSON.stringify(data, undefined, 4)
+
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error:<strong> ${data.message}`
                     } else {
                         output.innerHTML += `<br><strong> Response from broker-service:</strong> ${data.message}`
                     }
