--- a/front-end/templates/test.page.gohtml
+++ b/front-end/templates/test.page.gohtml
@@ -8,6 +8,7 @@
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker-service</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth-service</a>
+                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log-service</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -35,9 +36,47 @@
     <script>
         let brokerBtn = document.getElementById('brokerBtn')
         let authBrokerBtn = document.getElementById('authBrokerBtn')
+        let logBtn = document.getElementById('logBtn')
         let output = document.getElementById('output')
         let sent = document.getElementById('payload')
         let received = document.getElementById('received')
+
+        logBtn.addEventListener('click', function () {
+            const payload = {
+                action: 'log',
+                log: {
+                    name: 'event',
+                    data: 'Some kind of data'
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json")
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers
+            }
+
+            fetch("http://localhost:8000/handle", body)
+                .then((res) => res.json())
+                .then((data) => {
+                    sent.innerHTML = 'Empty post request'
+                    received.innerHTML = JSON.stringify(data, undefined, 4)
+
+                    if (data.error) {
+                        console.log(data.error + ' ' + data.message)
+                    } else {
+                        output.innerHTML += `<br><strong> Response from logger-service:</strong> ${data.message}`
+                    }
+                })
+                .catch((err) => {
+                    output.innerHTML += `<br><strong class="text-danger"> Error:</strong> ${err.message}`
+                })
+
+
+        })
 
         brokerBtn.addEventListener('click', function () {
             const body = {
@@ -64,8 +103,8 @@
             const payload = {
                 action: "auth",
                 auth: {
-                    email:"admin@example.com",
-                    password:"verysecret"
+                    email: "admin@example.com",
+                    password: "verysecret"
                 }
             }
 
