--- a/front-end/templates/test.page.gohtml
+++ b/front-end/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker-service</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth-service</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log-service</a>
+                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail-service</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -40,6 +41,44 @@
         let output = document.getElementById('output')
         let sent = document.getElementById('payload')
         let received = document.getElementById('received')
+        let mailBtn = document.getElementById('mailBtn')
+
+        mailBtn.addEventListener('click', function () {
+            const payload = {
+                action: 'mail',
+                mail: {
+                    from: 'sender@example.com',
+                    to: 'recipient@example.com',
+                    subject: 'Test Mail',
+                    message: 'This is a test mail from the front-end.'
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json")
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers
+            }
+
+            fetch("http://localhost:8000/handle", body)
+                .then((res) => res.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4)
+                    received.innerHTML = JSON.stringify(data, undefined, 4)
+
+                    if (data.error) {
+                        console.log(data.error + ' ' + data.message)
+                    } else {
+                        output.innerHTML += `<br><strong> Response from mail-service:</strong> ${data.message}`
+                    }
+                })
+                .catch((err) => {
+                    output.innerHTML += `<br><strong class="text-danger"> Error:</strong> ${err.message}`
+                })
+        })
 
         logBtn.addEventListener('click', function () {
             const payload = {
