refactor: harden microservices runtime, align compose/k8s routing, and add source-built docker images

--- a/front-end/templates/test.page.gohtml
+++ b/front-end/templates/test.page.gohtml
@@ -165,7 +165,7 @@
                     received.innerHTML = JSON.stringify(data, undefined, 4)
 
                     if (data.error) {
-                        output.innerHTML += `<br><strong>Error:<strong> ${data.message}`
+                        output.innerHTML += `<br><strong>Error:</strong> ${data.message}`
                     } else {
                         output.innerHTML += `<br><strong> Response from broker-service:</strong> ${data.message}`
                     }
