--- a/front-end/templates/test.page.gohtml
+++ b/front-end/templates/test.page.gohtml
@@ -8,9 +8,12 @@
                 <h1 class="headline">Microservice Control Room</h1>
                 <p class="subhead">Trigger broker workflows and inspect payloads in real time.</p>
             </div>
-            <div class="service-pill">
-                <span>Broker</span>
-                <code>{{.BrokerURL}}</code>
+            <div class="hero-tools">
+                <div class="service-pill">
+                    <span>Broker</span>
+                    <code>{{.BrokerURL}}</code>
+                </div>
+                <a class="inbox-link" href="{{.MailInboxURL}}" target="_blank" rel="noopener noreferrer">Open Mail Inbox</a>
             </div>
         </header>
 
